Closed Bug 587612 Opened 14 years ago Closed 14 years ago

Errors in #if !ENABLE_YARR_JIT RegExp compilation path (testRegExpTest.js failed on SPARC)

Categories

(Core :: JavaScript Engine, defect)

All
OpenSolaris
defect
Not set
blocker

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- final+

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

It seems the return value is not correct if YARR_JIT is not enabled.
Attached patch patch (obsolete) — Splinter Review
Assignee: general → ginn.chen
Status: NEW → ASSIGNED
Attachment #466281 - Flags: review?(cdleary)
Attached patch patchSplinter Review
Combine the fix for Bug 587619 and Bug 587621
Attachment #466281 - Attachment is obsolete: true
Attachment #466336 - Flags: review?(cdleary)
Attachment #466281 - Flags: review?(cdleary)
I believe this bug is causing Javascript regexp fail on PowerPC.
blocking2.0: --- → ?
Since the landing of YARR on trunk, both my PPC builds of SeaMonkey and Firefox won't run anymore (MailNews will start, but hang soon depending upon actions taken) - but Ginn's patch fixes that! Can we please get some traction here? -> Raising importance.
Severity: normal → blocker
Comment on attachment 466336 [details] [diff] [review] patch Sorry for the delay. Nice work -- silly errors on my part trying to get the #if parts out the door as quickly as possible. :-) Will push for you now!
Attachment #466336 - Flags: review?(cdleary) → review+
Summary: testRegExpTest.js failed on SPARC → Errors in #if !ENABLE_YARR_JIT RegExp compilation path (testRegExpTest.js failed on SPARC)
blocking2.0: ? → final+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b6
Blocks: 587771
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: