Bug 587612: errors in #if !ENABLE_YARR_JIT compilation path. (r=cdleary)